# Kaakao

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: kaakao-overview.qdoc  kaakao.qdocconf  style.css
gallery/: AboutWindow.qml  CMakeLists.txt  Main.qml  main.cpp
src/: Button.qml  CMakeLists.txt  KaakaoActivityOverlay.qml  KaakaoBadge.qml  KaakaoBusyIndicator.qml  KaakaoButton.qml  KaakaoCheckBox.qml  KaakaoComboBox.qml  KaakaoControlButton.qml  KaakaoDialog.qml  KaakaoDisclosureTriangle.qml  KaakaoFocusRing.qml  KaakaoGridDelegate.qml  KaakaoGridView.qml  KaakaoGroupBox.qml  KaakaoLabel.qml  KaakaoListDelegate.qml  KaakaoListView.qml  KaakaoMenu.qml  KaakaoMenuItem.qml  KaakaoMenuSeparator.qml  KaakaoPathControl.qml  KaakaoProgressBar.qml  KaakaoRadioButton.qml  KaakaoScopeBar.qml  KaakaoSearchField.qml  KaakaoSegmentedControl.qml  KaakaoSeparator.qml  KaakaoSheet.qml  KaakaoSidebar.qml  KaakaoSlider.qml  KaakaoSplitView.qml  KaakaoStatusBar.qml  KaakaoStatusIndicator.qml  KaakaoStepper.qml  KaakaoTabBar.qml  KaakaoTabButton.qml  KaakaoTableColumn.qml  KaakaoTableRowDelegate.qml  KaakaoTableView.qml  (+7 more)
tests/: CMakeLists.txt  main.cpp  tst_about.qml  tst_button.qml  tst_controlbutton.qml  tst_controls.qml  tst_dialog.qml  tst_disclosure.qml  tst_gridview.qml  tst_indicators.qml  tst_kaakaobutton.qml  tst_kaakaostepper.qml  tst_kaakaotooltip.qml  tst_label.qml  tst_listview.qml  tst_menu.qml  tst_scopebar.qml  tst_searchfield.qml  tst_sheet.qml  tst_sidebar.qml  tst_small_components.qml  tst_splitview.qml  tst_tabbar.qml  tst_tableview.qml  tst_textfield.qml  tst_theme.qml  tst_toolbar.qml  tst_untested_components.qml  tst_window.qml
